[package]
name = "iced_core"
version = "0.10.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
description = "The essential concepts of Iced"
license = "MIT"
repository = "https://github.com/iced-rs/iced"

[dependencies]
bitflags = "1.2"
thiserror = "1"
log = "0.4.17"
twox-hash = { version = "1.5", default-features = false }

[dependencies.winit]
git = "https://github.com/amrbashir/winit.git"
rev = "96593ab07da56564958520c0b003d328706bde8e"
default-features = false

[dependencies.palette]
version = "0.7"
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"

[dev-dependencies]
approx = "0.5"
